updated and added new css for columns form--positioned help paragraph, fixed spacing and margin issues. #3846

--- a/openscholar/modules/os/modules/os_boxes/plugins/os_boxes_columns/css/os_boxes_columns.form.css
+++ b/openscholar/modules/os/modules/os_boxes/plugins/os_boxes_columns/css/os_boxes_columns.form.css
@@ -93,7 +93,7 @@
  * Layout tumbnail container
  */
 #os-boxes-columns-layout-select{margin-left:222px;}
-.form-item.form-type-radios.form-item-num-cols {padding:0;margin:0;}
+.form-item.form-type-radios.form-item-num-cols {padding:0;margin:0 0 5px;}
 
 /**
  * Styling for Unused Widgets container
@@ -105,19 +105,23 @@
   float: left;
   border: 1px solid #ccc;
   padding: 5px;
-  margin-top: -170px;
-  margin-right: 10px;
+  margin: -170px 10px 15px 0;
+
 }
 
+#unused-widgets .form-item-search label {font-weight:normal;}
+
 #unused-widgets span {
- font-weight;normal;
+ font-size: 13px;
+margin-bottom: 8px;
+display: block;
 }
 
 #unused-widgets .form-wrapper {
  
   height: 510px;
   overflow:auto;
-  max-height: 440px;
+  max-height: 435px;
 }
 
 #unused-widgets #edit-search {
