--- a/openscholar/themes/cp_theme/css/cp_theme.css
+++ b/openscholar/themes/cp_theme/css/cp_theme.css
@@ -239,14 +239,20 @@ div.ctools-modal-content .modal-content .modal-throbber-wrapper img {
 	display: block;
 		}
 		
-.helper.columns {
-	width: 968px !important;
-		}		
+		
 
 .downarrow {
 	padding-right: 12px;
-	background: url('../../../themes/os_basetheme/images/scholarbase-sprite.png') 52px -553px no-repeat;
+	background: url('../../../themes/os_basetheme/images/scholarbase-sprite.png') 0 -553px no-repeat;
 }
+
+.helper.columns {
+	width: 968px !important;
+		}
+		
+.helper.columns .downarrow {
+	background-position: 52px -553px;
+		}
 	
 .formlabel {color: #444;
 font-size: 12px;
